--- a/style.css
+++ b/style.css
@@ -8,10 +8,27 @@ body {
 	background-color: rgb(161, 100, 223);
 	font-family: 'Poppins', sans-serif;
 	display: flex;
-	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	height: 100vh;
 	overflow: hidden;
 	margin: 0;
+}
+
+.btn {
+	background-color: blue;
+	border-radius: 7px;
+	color: #fff;
+	margin: 1rem;
+	padding: 1.5rem 3rem;
+	font-size: 1.3rem;
+	font-family: inherit;
+	cursor: pointer;
+}
+
+.btn:focus {
+	outline: none;
+}
+.btn:hover {
+	opacity: 0.7;
 }
